ui eventlistener in module

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
             style="width:75px"
             >
         </li>
+        <li><button>Clear</button></li>
         <hr>
-        <li>list 1</li>
-        <li>list 2</li>
+        <li>Correct Collision </li>
+        <li>Generate QuadTree</li>
     </ul>
     <script src="index.js" type="module"></script>
 </body>
