--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
             <input type="color" style="border:0;" id="svgprop_color">
         </li>
         <!--Size Property-->
-        <li>Size <p id="display_svgsize" style="display:inline">_</p>
+        <li>Size <p id="display_svgsize" style="display:inline-block; width:4ch;">_</p>
             <input type="range" min="1" max="100" value="50" class="slider" id="svgprop_size"
             style="width:75px"
             >
         </li>
         <!--Ammount Property-->
-        <li>Circles <p id="display_amount" style="display:inline">_</p>
+        <li>Circles <p id="display_amount" style="display:inline-block;width:4ch;">_</p>
             <input type="range" min="1" max="100" value="1" class="slider" id="svgprop_amount"
             style="width:75px"
             >
         </li>
         <!--Random Spread Property-->
-        <li>Spread <p id="display_spread" style="display:inline">_</p>
+        <li>Spread <p id="display_spread" style="display:inline-block;width:4ch;">_</p>
             <input type="range" min="1" max="300" value="1" class="slider" id="svgprop_spread"
             style="width:75px"
             >
         </li>
-        <li><button>Clear</button></li>
+        <li><button id="clear_svg">Clear</button></li>
         <hr>
         <li>Correct Collision </li>
         <li>Generate QuadTree</li>
