wip basic quad container

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         </li>
         <li><button id="clear_svg">Clear</button></li>
         <hr>
+        <li><button id="generate_quadtree">Generate QuadTree</button></li>
         <li>Correct Collision </li>
-        <li>Generate QuadTree</li>
+
     </ul>
     <script src="index.js" type="module"></script>
 </body>
