Added JSON details in console debugging

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body style="overflow:hidden;">
-    <svg id="content_svg" width="100vw" height="100vh"></svg>
+    <svg id="content_svg" width="100vw" height="100vh">
+    </svg>
     <ul style="display:inline-block;position:fixed;top:10vh;background-color:rgb(224, 167, 167)">
         <!--Label-->
         <label style="font-weight: bold;">Circle Properties</label>
