refactor JSON debug

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body style="overflow:hidden;">
     <svg id="content_svg" width="100vw" height="100vh">
+        <g id="quadtree-rects"></g>
+        <g id="quadtree-circles"></g>
     </svg>
     <ul style="display:inline-block;position:fixed;top:10vh;background-color:rgb(224, 167, 167)">
         <!--Label-->
