Bulk work, refactor QuadTree class and improving quad splitting

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><button id="clear_svg">Clear</button></li>
         <hr>
         <li><button id="generate_quadtree">Generate QuadTree</button></li>
+        <li><button id="generate_rect">Generate Rectangles</button></li>
         <li>Correct Collision </li>
 
     </ul>
