Basic Physics function outline

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <hr>
         <li><button id="generate_quadtree">Generate QuadTree</button></li>
         <li><button id="generate_rect">Generate Rectangles</button></li>
+
+        <!--Toggle physics from mouse to points-->
+        <li><input type="checkbox" id="toggle_mousePhysics" unchecked>Toggle physics</li>
         <li>Correct Collision </li>
 
     </ul>
