--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body style="overflow:hidden;">
@@ -11,42 +12,46 @@
         <g id="quadtree-rects"></g>
         <g id="quadtree-circles"></g>
     </svg>
-    <ul style="display:inline-block;position:fixed;top:10vh;background-color:rgb(224, 167, 167)">
-        <!--Label-->
-        <label style="font-weight: bold;">Circle Properties</label>
-        <!--Count Property-->
-        <li>Count <p id="display_svgNumber" style="display:inline">_</p></li>
-        <!--Color Property-->
-        <li >Color
-            <input type="color" style="border:0;" id="svgprop_color">
-        </li>
-        <!--Size Property-->
-        <li>Size <p id="display_svgsize" style="display:inline-block; width:4ch;">_</p>
-            <input type="range" min="1" max="100" value="50" class="slider" id="svgprop_size"
-            style="width:75px"
-            >
-        </li>
-        <!--Ammount Property-->
-        <li>Circles <p id="display_amount" style="display:inline-block;width:4ch;">_</p>
-            <input type="range" min="1" max="100" value="1" class="slider" id="svgprop_amount"
-            style="width:75px"
-            >
-        </li>
-        <!--Random Spread Property-->
-        <li>Spread <p id="display_spread" style="display:inline-block;width:4ch;">_</p>
-            <input type="range" min="1" max="300" value="1" class="slider" id="svgprop_spread"
-            style="width:75px"
-            >
-        </li>
-        <li><button id="clear_svg">Clear</button></li>
-        <hr>
-        <li><button id="generate_quadtree">Generate QuadTree</button></li>
-        <li><button id="generate_rect">Generate Rectangles</button></li>
+    <ul id="gui_floater">
+        <div class="title_bar">
+            <!--Label-->
+            <label>Circle Properties</label>
+            <button id="corner_icon"></button>
+        </div>
+        <g style="visibility:visible">
+            <!--Count Property-->
+            <li>Count <p id="display_svgNumber" style="display:inline">_</p></li>
+            <!--Color Property-->
+            <li >Color
+                <input type="color" style="border:0;" id="svgprop_color">
+            </li>
+            <!--Size Property-->
+            <li>Size <p id="display_svgsize" style="display:inline-block; width:4ch;">_</p>
+                <input type="range" min="1" max="100" value="50" class="slider" id="svgprop_size"
+                style="width:75px"
+                >
+            </li>
+            <!--Ammount Property-->
+            <li>Circles <p id="display_amount" style="display:inline-block;width:4ch;">_</p>
+                <input type="range" min="1" max="100" value="1" class="slider" id="svgprop_amount"
+                style="width:75px"
+                >
+            </li>
+            <!--Random Spread Property-->
+            <li>Spread <p id="display_spread" style="display:inline-block;width:4ch;">_</p>
+                <input type="range" min="1" max="300" value="1" class="slider" id="svgprop_spread"
+                style="width:75px"
+                >
+            </li>
+            <li><button id="clear_svg">Clear</button></li>
+            <hr>
+            <li><button id="generate_quadtree">Generate QuadTree</button></li>
+            <li><button id="generate_rect">Generate Rectangles</button></li>
 
-        <!--Toggle physics from mouse to points-->
-        <li><input type="checkbox" id="toggle_mousePhysics" unchecked>Toggle physics</li>
-        <li>Correct Collision </li>
-
+            <!--Toggle physics from mouse to points-->
+            <li><input type="checkbox" id="toggle_mousePhysics" unchecked>Toggle physics</li>
+            <li>Correct Collision </li>
+        </g>
     </ul>
     <script src="index.js" type="module"></script>
 </body>
