UI update minimize/maximize button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <div class="title_bar">
             <!--Label-->
             <label>Circle Properties</label>
-            <button id="corner_icon"></button>
+            <button id="corner_icon">
+                <div id="corner_icon_inside">
+
+                </div></button>
         </div>
         <g style="visibility:visible">
             <!--Count Property-->
