fix count, adjust mouse physics

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <g style="visibility:visible">
             <!--Count Property-->
-            <li>Count <p id="display_svgNumber" style="display:inline">_</p></li>
+            <li>Count <p id="display_svgNumber" style="display:inline">0</p></li>
             <!--Color Property-->
             <li >Color
                 <input type="color" style="border:0;" id="svgprop_color">
@@ -53,7 +53,6 @@
 
             <!--Toggle physics from mouse to points-->
             <li><input type="checkbox" id="toggle_mousePhysics" unchecked>Toggle physics</li>
-            <li>Correct Collision </li>
         </g>
     </ul>
     <script src="index.js" type="module"></script>
