--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/app/styles/style.css">
+    <link rel="stylesheet" href="/app/quadtree/styles/style.css">
     <title>2D Collision system</title>
     
     <!-- Important used to determin where a microservice is mounted. 
         /app/ is temporary location 
     -->
-    <base href="/app/">
+    <base href="/app/quadtree">
 </head>
 <body>
     <main>
