--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <title>2D Collision system</title>
+    
+    <!-- Important used to determin where a microservice is mounted. 
+        /app/ is temporary location 
+    -->
+    <base href="/app/">
 </head>
 <body>
     <main>
