--- a/static/index.html
+++ b/static/index.html
@@ -80,6 +80,6 @@
     <button class="burger" id="mainMenu">
         <div></div><div></div><div></div>
     </button>
-    <script src="index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
