--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>2D Collision system</title>
 </head>
 <body>
@@ -80,6 +80,6 @@
     <button class="burger" id="mainMenu">
         <div></div><div></div><div></div>
     </button>
-    <script src="/index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
