Generate-Physics mode switch. 'Generate' pointerdown check - against mobile burger-menu open.

--- a/static/index.html
+++ b/static/index.html
@@ -28,11 +28,11 @@
 
             </main>
         <div class="guiLists">
-
+            
             <!--<li><button aria-label="About this application" title="About this application">About</button></li>-->
 
             <!--Toggle physics from mouse to points-->            
-            <form>
+            <form class="listElement">
                 <input type="radio" name="toggleCursorMode" id="mouseGenerate" checked="checked">
                 <label for="mouseGenerate">Generate</label>
                 <input type="radio" name="toggleCursorMode" id="mousePhysics" >
