Generate-Physics mode switch. Custom radio button wip.

--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
             <!--<li><button aria-label="About this application" title="About this application">About</button></li>-->
 
             <!--Toggle physics from mouse to points-->            
-            <form class="listElement">
+            <form>
                 <input type="radio" name="toggleCursorMode" id="mouseGenerate" checked="checked">
                 <label for="mouseGenerate">Generate</label>
                 <input type="radio" name="toggleCursorMode" id="mousePhysics" >
