Generate-Physics mode switch. toggleMenu() function consistent with burger animation and burgermenu toggle modal. Remove width bleed & drag-selectable UI text.

--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
     </main> 
 
     <ul id="gui_floater">
-        <div id="mobileWrap" class="active">
+        <div id="mobileWrap" >
             <main class="title_bar">
                     <!--Label-->
                     <label aria-label="Click with mouse to move docker." >Circle Properties Docker </label>
